# internal/application/payment/dto.go
@@ -6,10 +6,10 @@ import (
 
 // WebhookRequest represents the incoming webhook payload
 type WebhookRequest struct {
-	Address     string `json:"address"`
-	Network     string `json:"network"`
-	Currency    string `json:"currency"`
-	Amount      string `json:"amount"`
+	Address string `json:"address"`
+	// Network     string `json:"network"`
+	Currency string `json:"currency"`
+	// Amount      string `json:"amount"`
 	Timeout     int    `json:"timeout"`
 	CallbackURL string `json:"callback_url"`
 }
