# internal/domain/blockchain/entity.go
@@ -1,6 +1,11 @@
 package blockchain
 
-import "time"
+import (
+	"time"
+
+	"github.com/ethereum/go-ethereum/common"
+	"github.com/google/uuid"
+)
 
 type ChainType string
 type CurrencyType string
@@ -20,4 +25,12 @@ type RPCNode struct {
 	Chain       ChainType
 	LastFailure time.Time
 	Healthy     bool
+}
+
+type Address struct {
+	ID       uuid.UUID
+	Address  common.Address
+	Currency CurrencyType
+	Callback string
+	Timeout  time.Time
 }
